--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,37 +41,37 @@ workflows:
       - cross-compile:
           requires:
             - build
-      - loadtest:
-          requires:
-            - build
-      - test:
-          requires:
-            - setup-and-lint
-      - gosec:
-          requires:
-            - setup-and-lint
-      - coverage:
-          requires:
-            - setup-and-lint
-      - publish-stable:
-          requires:
-            - cross-compile
-            - loadtest
-            - test
-            - gosec
-            - coverage
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v[0-9].[0-9].[0-9]+.*/
+      #- loadtest:
+      #    requires:
+      #      - build
+      #- test:
+      #    requires:
+      #      - setup-and-lint
+      #- gosec:
+      #    requires:
+      #      - setup-and-lint
+      #- coverage:
+      #    requires:
+      #      - setup-and-lint
+      #- publish-stable:
+      #    requires:
+      #      - cross-compile
+      #      #- loadtest
+      #      #- test
+      #      #- gosec
+      #      #- coverage
+      #    filters:
+      #      branches:
+      #        ignore: /.*/
+      #      tags:
+      #        only: /^v[0-9].[0-9].[0-9]+.*/
       - publish-dev:
           requires:
             - cross-compile
-            - loadtest
-            - test
-            - gosec
-            - coverage
+            #- loadtest
+            #- test
+            #- gosec
+            #- coverage
           filters:
             branches:
               only: master
@@ -176,6 +176,12 @@ jobs:
             make docker-otelcol
             docker tag otelcol:latest otel/opentelemetry-collector:${CIRCLE_TAG:1}
             docker tag otelcol:latest otel/opentelemetry-collector:latest
+      - run:
+          name: Calculate checksums 
+          command: shasum -a 256 bin/* > bin/checksums.txt
+      - run:
+          name: Upload artifacts
+          command: ghr --draft -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` bin/
       - run:
           name: Login to Docker Hub
           command: docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD
