--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ workflows:
             - coverage
           filters:
             branches:
-              ignore: /master/
+              ignore: /.*/
             tags:
               only: /^v[0-9].[0-9].[0-9]+.*/
 
